--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
     </div>
 
-    <a href="C:\Users\radhi\rj\rj html\pg2.html">
+    <a href="index2.html">
       <button>Start Demo</button>
     </a>
 </body>
