--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bubble Sort using Stacks</title>
-    <link rel="stylesheet" href="C:\Users\radhi\rj\rj html\styl.css">
+    <link rel="stylesheet"styl.css">
 </head>
 <body>
     <div class="container">
