--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bubble Sort using Stacks</title>
-    <link rel="stylesheet" href="styl.css">
+    <link rel="stylesheet" href="master/styl.css">
 </head>
 <body>
     <div class="container">
@@ -35,7 +35,7 @@
         
     </div>
 
-    <a href="index2.html">
+    <a href="master/index2.html">
       <button>Start Demo</button>
     </a>
 </body>
