--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </ol>
         
     </div>
-    <a href="master/index2.html">
+    <a href="index2.html">
         <button>Start Demo</button>
     </a>
    
