--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bubble Sort Visualization</title>
-    <link rel="stylesheet" type="text/css" href="styl.css">
+    <link rel="stylesheet" href="styl.css">
 </head>
 <body>
     <div class="controls">
@@ -34,6 +34,6 @@
         <div id="stack-container"></div>
     </div>
 
-    <script src="scrpt.js"type="text/scrpt.js"></script>
+    <script src="scrpt.js"></script>
 </body>
 </html>
