--- a/index2.html
+++ b/index2.html
@@ -34,6 +34,6 @@
         <div id="stack-container"></div>
     </div>
 
-    <script src="scrpt.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
